--- a/catalog.html
+++ b/catalog.html
@@ -62,22 +62,16 @@
                 <legend class="filter-legend">Тип Жилья</legend>
                 <ul>
                   <li class="booking-option">
-                    <label>
-                      <input type="checkbox" name="type-of-housing" value="hotel" checked>
-                      Гостиница
-                    </label>
+                    <label for="hotel">Гостиница</label>
+                    <input id="hotel" type="checkbox" name="type-of-housing" value="hotel" checked>
                   </li>
                   <li class="booking-option">
-                    <label>
-                      <input type="checkbox" name="type-of-housing" value="motel" checked>
-                      Мотель
-                    </label>
+                      <label for="motel">Мотель</label>
+                      <input id="motel" type="checkbox" name="type-of-housing" value="motel" checked>
                   </li>
                   <li class="booking-option">
-                    <label>
-                      <input type="checkbox" name="type-of-housing" value="alotta" checked>
-                      Апартаменты
-                    </label>
+                    <label for="alotta">Апартаменты</label>
+                    <input id="alotta" type="checkbox" name="type-of-housing" value="alotta" checked>
                   </li>
                 </ul>
               </fieldset>
