--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <ol class="features-main-list">
           <li class="feature-item">
             <div class="feature-item-textbox feature-item-left feature-item-blue">
-              <h3>Настоящий городок</h3>
+              <h3 class="feature-item-header">Настоящий городок</h3>
               <span class="feature-item-number">№1</span>
               <p class="feature-item-describtion">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
@@ -83,7 +83,7 @@
 
           <li class="feature-item">
             <div class="feature-item-textbox feature-item-right feature-item-blue">
-              <h3>Там есть мост дьявола</h3>
+              <h3 class="feature-item-header">Там есть мост дьявола</h3>
               <span class="feature-item-number">№2</span>
               <p class="feature-item-describtion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
@@ -94,7 +94,7 @@
 
           <li class="feature-item">
             <div class="feature-item-textbox feature-item-grey">
-              <h3>Небольшая площадь</h3>
+              <h3 class="feature-item-header">Небольшая площадь</h3>
               <span class="feature-item-number">№3</span>
               <p class="feature-item-describtion">Все достопримечательности находятся очень близко</p>
             </div>
@@ -102,7 +102,7 @@
 
           <li class="feature-item">
             <div class="feature-item-textbox feature-item-grey">
-              <h3>Красивая дорога</h3>
+              <h3 class="feature-item-header">Красивая дорога</h3>
               <span class="feature-item-number">№4</span>
               <p class="feature-item-describtion">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
@@ -110,7 +110,7 @@
 
           <li class="feature-item">
             <div class="feature-item-textbox feature-item-grey">
-              <h3>Мало туристов</h3>
+              <h3 class="feature-item-header">Мало туристов</h3>
               <span class="feature-item-number">№5</span>
               <p class="feature-item-describtion">Большинство едет в гранд каньон и толпится там</p>
             </div>
