ещё подпраил попап на главной (интерактивные инпуты)

--- a/index.html
+++ b/index.html
@@ -133,23 +133,23 @@
         <form class="booking-form" action="https://echo.htmlacademy.ru" method="POST">
           <p>
             <label for="arrival-date">Дата заезда:</label>
-            <input type="text" id="arrival-date" name="arrival-date" value="" placeholder="24 апреля 2017" required>
+            <input class="arrival-date" type="text" id="arrival-date" name="arrival-date" value="" placeholder="24 апреля 2017" required>
             <button class="calendar-button" type="button" aria-label="Выбор даты"></button>
           </p>
           <p>
             <label for="departure-date">Дата выезда:</label>
-            <input type="text" id="departure-date" name="departure-date" value="" placeholder="4 июля 2017" required>
+            <input class="departure-date" type="text" id="departure-date" name="departure-date" value="" placeholder="4 июля 2017" required>
             <button class="calendar-button" type="button" aria-label="Выбор даты"></button>
           </p>
           <p>
             <label for="number-of-adults">Взрослые:</label>
-            <input type="number" value="2" id="number-of-adults" name="number-of-adults">
+            <input class="number-of-adults" type="number" value="2" id="number-of-adults" name="number-of-adults">
             <button class="booking-form-rate-button" type="button" aria-label="Добавить">+</button>
             <button class="booking-form-rate-button" type="button" aria-label="Уменьшить">-</button>
           </p>
           <p>
             <label for="number-of-children">Дети:</label>
-            <input type="number" name="number-of-children" id="number-of-children" value="0">
+            <input class="number-of-children" type="number" name="number-of-children" id="number-of-children" value="0">
             <button class="booking-form-rate-button" type="button" aria-label="Добавить">+</button>
             <button class="booking-form-rate-button" type="button" aria-label="Уменьшить">-</button>
           </p>
