--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="page-container">
+    <div class="container">
           <!-- HEADER -->
 
     <header class="main-header">
         <nav class="site-menu">
             <a class="header-logo">
-                <img src="img/svg/logo-sedona.svg" alt="логотип City of Sedona" height="71px" width="140px">
+                <img src="img/svg/logo-sedona.svg" alt="логотип City of Sedona" height="71px" width="140px" style="display: block">
             </a>
           <ul class="site-navigation">
-            <li><a class="menu-button menu-information" href="#">Информация</a></li>
-            <li><a class="menu-button menu-media" href="#">Фото и Видео</a></li>
-            <li><a class="menu-button menu-map" href="#">Карта штата</a></li>
-            <li><a class="menu-button menu-catalog" href="catalog.html">Гостиницы</a></li>
+            <li><a class="menu-button" href="#">Информация</a></li>
+            <li><a class="menu-button" href="#">Фото и Видео</a></li>
+            <li><a class="menu-button" href="#">Карта штата</a></li>
+            <li><a class="menu-button" href="catalog.html">Гостиницы</a></li>
           </ul>
         </nav>
       </header>
@@ -32,9 +32,9 @@
         <!-- INTRO -->
 
         <section class="intro">
-          <div class="banner">
+          <div class="intro-banner">
           <!-- Фон с горами в CSS -->
-            <img class="intro-logo" src="img/svg/intro-welcome.svg" alt="Баннер с текстом Welcome to Sedona" width="459px" height="353px">
+            <img class="intro-logo" src="img/svg/intro-welcome.svg" alt="Баннер с текстом Welcome to Sedona" width="459px" height="353px" style="display: block">
           </div>
           <div class="intro-text">
             <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
@@ -54,7 +54,7 @@
                     <p class="feature-item-describtion">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                   </div>
                   <div class="feature-item-image">
-                    <img src="img/photo-feature1.jpg" alt="Фото: городская жизнь в Седоне" width="800px" height="256px">
+                    <img src="img/photo-feature1.jpg" alt="Фото: городская жизнь в Седоне" width="800px" height="256px" style="display: block">
                   </div>
               </div>
 
@@ -93,7 +93,7 @@
                 <p class="feature-item-describtion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
               <div class="feature-item-image">
-                <img src="img/photo-feature2.jpg" alt="Фото: мост дьявола" width="800px" height="256px">
+                <img src="img/photo-feature2.jpg" alt="Фото: мост дьявола" width="800px" height="256px" style="display: block">
               </div>
             </li>
 
