--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
         <section class="features">
           <ol class="features-main-list">
-            <li class="feature-item">
-              <div class="city-item">
+            <li class="feature-item city-item">
+
                 <div class="feature-item-textbox feature-item-left feature-item-blue">
                     <h3 class="feature-item-header">Настоящий городок</h3>
                     <span class="feature-item-number">№1</span>
@@ -56,7 +56,7 @@
                   <div class="feature-item-image">
                     <img src="img/photo-feature1.jpg" alt="Фото: городская жизнь в Седоне" width="800px" height="256px" style="display: block">
                   </div>
-              </div>
+
 
 
               <!--Список с "дополнительными бонусами" -->
@@ -128,7 +128,7 @@
 
         <section class="booking">
           <p class="booking-lead">Заинтересовались?</p>
-          <p class="booking-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Cедоне</p>
+          <p class="booking-text">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Cедоне</p>
           <a class="booking-search-button" href="#">Поиск Гостиницы в Седоне</a>
         </section>
 
