--- a/index.html
+++ b/index.html
@@ -87,34 +87,34 @@
             <!-- Продолжение основного списка преимуществ -->
 
             <li class="feature-item bridge-item">
+              <div class="feature-item-image">
+                <img src="img/photo-feature2.jpg" alt="Фото: мост дьявола" width="800px" height="256px" style="display: block">
+              </div>
               <div class="feature-item-textbox feature-item-right feature-item-blue">
                 <h3 class="feature-item-header">Там есть мост дьявола</h3>
                 <span class="feature-item-number">№2</span>
                 <p class="feature-item-describtion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
-              <div class="feature-item-image">
-                <img src="img/photo-feature2.jpg" alt="Фото: мост дьявола" width="800px" height="256px" style="display: block">
-              </div>
             </li>
 
-            <li class="feature-item square-item">
-              <div class="feature-item-textbox feature-item-grey">
+            <li class="feature-item square-item feature-item-grey">
+              <div class="feature-item-textbox">
                 <h3 class="feature-item-header">Небольшая площадь</h3>
                 <span class="feature-item-number">№3</span>
                 <p class="feature-item-describtion">Все достопримечательности находятся очень близко</p>
               </div>
             </li>
 
-            <li class="feature-item road-item">
-              <div class="feature-item-textbox feature-item-grey">
+            <li class="feature-item road-item feature-item-grey">
+              <div class="feature-item-textbox">
                 <h3 class="feature-item-header">Красивая дорога</h3>
                 <span class="feature-item-number">№4</span>
                 <p class="feature-item-describtion">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </div>
             </li>
 
-            <li class="feature-item tourists-item">
-              <div class="feature-item-textbox feature-item-grey">
+            <li class="feature-item tourists-item feature-item-grey">
+              <div class="feature-item-textbox">
                 <h3 class="feature-item-header">Мало туристов</h3>
                 <span class="feature-item-number">№5</span>
                 <p class="feature-item-describtion">Большинство едет в гранд каньон и толпится там</p>
