выравнил элементы внутри блоков, добавил иконки в футер

--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
                 <!-- иконки фоновые, т.е. делаются в CSS -->
                 <li class="features-extra-list-item house">
                   <div class="features-extra-list-textbox">
-                    <h3>Жильё</h3>
+                    <h4>Жильё</h4>
                     <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
                   </div>
                 </li>
                 <li class="features-extra-list-item food">
                   <div class="features-extra-list-textbox">
-                    <h3>Еда</h3>
+                    <h4>Еда</h4>
                     <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                   </div>
                 </li>
                 <li class="features-extra-list-item gifts">
                   <div class="features-extra-list-textbox">
-                    <h3>Сувениры</h3>
+                    <h4>Сувениры</h4>
                     <p>Не только китайского, но и местного производства!</p>
                   </div>
                 </li>
@@ -91,7 +91,7 @@
                 <img src="img/photo-feature2.jpg" alt="Фото: мост дьявола" width="800px" height="256px" style="display: block">
               </div>
               <div class="feature-item-textbox feature-item-right feature-item-blue">
-                <h3 class="feature-item-header">Там есть мост дьявола</h3>
+                <h3 class="feature-item-header">Там есть<br> мост дьявола</h3> <!-- без br не получилось под макет попасть -->
                 <span class="feature-item-number">№2</span>
                 <p class="feature-item-describtion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
@@ -176,13 +176,13 @@
         <ul class="social-links">
           <!-- Иконки фоновые => в CSS -->
           <li class="social-button">
-            <a class="twitter social-link" href="#">Tw<span class="visually-hidden social-link">Твитер</span></a>
+            <a class="twitter social-link" href="#"><span class="visually-hidden social-link">Твитер</span></a>
           </li>
           <li class="social-button">
-            <a class="facebook social-link" href="#">Fb<span class="visually-hidden">Фейсбук</span></a>
+            <a class="facebook social-link" href="#"><span class="visually-hidden">Фейсбук</span></a>
           </li>
           <li class="social-button">
-            <a class="youtube social-link" href="#">Yt<span class="visually-hidden">Ютуб</span></a>
+            <a class="youtube social-link" href="#"><span class="visually-hidden">Ютуб</span></a>
           </li>
         </ul>
         <div class="copyright">
