добавил звёзды в рейтинг

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="img/svg/logo-sedona.svg" alt="логотип City of Sedona" height="71px" width="140px">
             </a>
           <ul class="site-navigation">
-            <li><a class="menu-button">Информация</a></li>
+            <li><a class="menu-button" href="#">Информация</a></li> <!-- Т.З. п.3.3 -->
             <li><a class="menu-button" href="#">Фото и Видео</a></li>
             <li><a class="menu-button" href="#">Карта штата</a></li>
             <li><a class="menu-button" href="catalog.html">Гостиницы</a></li>
@@ -162,7 +162,7 @@
           </form>
         </section>
 
-        <!-- КАРТА -->
+        <!-- КАРТА --> <!-- Т.З. п.3.13 -->
         <section class="map">
           <img src="img/map.png" alt="Карта: расположение города Седона в штате Аризона" width="1200" height="593">
         </section>
