--- a/catalog.html
+++ b/catalog.html
@@ -13,11 +13,11 @@
 
       <header class="main-header">
         <nav class="site-menu">
-            <a class="header-logo" href="index.html"> <!-- Т.З. п.3.2 -->
+            <a class="header-logo" href="index.html"> <!-- Т.З. п.3.2 и 3.14 -->
                 <img src="img/svg/logo-sedona.svg" alt="логотип City of Sedona" height="71px" width="140px">
             </a>
           <ul class="site-navigation">
-            <li><a class="menu-button">Информация</a></li>
+            <li><a class="menu-button" href="#">Информация</a></li> <!-- Т.З. п.3.3 -->
             <li><a class="menu-button" href="#">Фото и Видео</a></li>
             <li><a class="menu-button" href="#">Карта штата</a></li>
             <li><a class="menu-button active">Гостиницы</a></li>
@@ -33,7 +33,7 @@
         <section class="searching-filters">
           <h2 class="visually-hidden">Параметры гостиниц</h2>
           <!-- Формы для фильтра по гостиницам -->
-          <form class="filters" method="GET" action="https://echo.htmlacademy.ru/">
+          <form class="filters" method="GET" action="https://echo.htmlacademy.ru/"> <!-- Т.З. п.3.17 -->
 
             <!-- Инфраструктура -->
 
@@ -143,7 +143,9 @@
               </div>
               <div class="hotel-review">
                 <p class="rating">Рейтинг: 8,5</p>
-                <p class="rating-stars">*****</p>
+                <p class="rating-stars stars-5">
+                  <span class="visually-hidden">5 звёзд</span>
+                </p>
               </div>
             </li>
             <li>
@@ -161,7 +163,9 @@
               </div>
               <div class="hotel-review">
                 <p class="rating">Рейтинг: 8,9</p>
-                <p class="rating-stars">***</p>
+                <p class="rating-stars stars-3">
+                  <span class="visually-hidden">3 звезды</span>
+                </p>
               </div>
             </li>
             <li>
@@ -179,7 +183,9 @@
               </div>
               <div class="hotel-review">
                 <p class="rating">Рейтинг: 9,2</p>
-                <p class="rating-stars">**</p>
+                <p class="rating-stars stars-2">
+                  <span class="visually-hidden">2 звезды</span>
+                </p>
               </div>
             </li>
           </ul>
