--- a/catalog.html
+++ b/catalog.html
@@ -41,16 +41,16 @@
               <legend class="filter-legend">Инфраструктура</legend>
               <ul>
                 <li class="booking-option">
+                  <input class="visually-hidden filters-checkbox" id="pool" type="checkbox" name="pool" checked>
                   <label for="pool">Бассейн</label>
-                  <input id="pool" type="checkbox" name="pool" checked>
                 </li>
                 <li class="booking-option">
+                  <input class="visually-hidden filters-checkbox" id="parking" type="checkbox" name="parking">
                   <label for="parking">Парковка</label>
-                  <input id="parking" type="checkbox" name="parking">
                 </li>
                 <li class="booking-option">
+                  <input class="visually-hidden filters-checkbox" id="wi-fi" type="checkbox" name="Wi-Fi">
                   <label for="wi-fi">Wi-Fi</label>
-                    <input id="wi-fi" type="checkbox" name="Wi-Fi">
                 </li>
               </ul>
             </fieldset>
@@ -61,16 +61,16 @@
               <legend class="filter-legend">Тип Жилья</legend>
               <ul>
                 <li class="booking-option">
+                  <input class="visually-hidden filters-checkbox" id="hotel" type="checkbox" name="type-of-housing" value="hotel" checked>
                   <label for="hotel">Гостиница</label>
-                  <input id="hotel" type="checkbox" name="type-of-housing" value="hotel" checked>
                 </li>
                 <li class="booking-option">
-                    <label for="motel">Мотель</label>
-                    <input id="motel" type="checkbox" name="type-of-housing" value="motel" checked>
+                  <input class="visually-hidden filters-checkbox" id="motel" type="checkbox" name="type-of-housing" value="motel" checked>
+                  <label for="motel">Мотель</label>
                 </li>
                 <li class="booking-option">
+                  <input class="visually-hidden filters-checkbox" id="alotta" type="checkbox" name="type-of-housing" value="alotta" checked>
                   <label for="alotta">Апартаменты</label>
-                  <input id="alotta" type="checkbox" name="type-of-housing" value="alotta" checked>
                 </li>
               </ul>
             </fieldset>
