исправил замечания, пробую добавить JS

--- a/catalog.html
+++ b/catalog.html
@@ -74,15 +74,15 @@
             <fieldset class="rent-price">
               <legend class="filter-legend">Стоимость в сутки (р):</legend>
               <div class="price-inputs">
-                <label class="min-price" for="min-price"> от: <input type="text" id="min-price" name="min-price" value="0"> </label>
-                <label class="max-price" for="max-price"> до: <input type="text" id="max-price" name="max-price" value="3000"></label>
+                <label class="min-price" for="min-price"> от <input type="text" id="min-price" name="min-price" value="0"> </label>
+                <label class="max-price" for="max-price"> до <input type="text" id="max-price" name="max-price" value="3000"></label>
               </div>
               <div class="range-controls">
                 <div class="scale-line">
                   <div class="range-line"></div>
                 </div>
-                <button type="button" class="range-button range-button-min" aria-label="кнопка-ползунок для ввода минимальной цены"></button>
-                <button type="button" class="range-button range-button-max" aria-label="кнопка-ползунок для ввода максимальной цены"></button>
+                <button type="button" class="range-button range-button-min" aria-label="выбор минимальной цены"></button>
+                <button type="button" class="range-button range-button-max" aria-label="выбор максимальной цены"></button>
               </div>
               <button class="filters-submit-button">Показать</button>
             </fieldset>
